# python-digest

./: .env.example  CLAUDE.md  README.md  USAGE.md  config.py  email_sender.py  main.py  pyproject.toml
agents/: __init__.py  copywriter.py  deduplicator.py  filter.py  image_generator.py  pipeline.py  scout.py
apps/digest/: __init__.py  admin.py  apps.py  models.py  prompts.py  prompts_README.md  urls.py  views.py
apps/digest/agents/: __init__.py  base.py
apps/digest/fixtures/: README.md  python_digest_initial.json
apps/digest/management/commands/: run_digest.py
apps/digest/migrations/: 0001_initial.py  0002_alter_configuration_openai_api_key.py  0002_remove_source_type.py
apps/digest/services/: __init__.py  copywriter_service.py  deduplication_service.py  digest_service.py  email_service.py  filter_service.py  image_generation_service.py  integration_service.py  pipeline_runner.py  scout_service.py
apps/digest/tests/: __init__.py  test_admin.py  test_commands.py  test_models.py  test_services.py
config/: asgi.py  settings.py  urls.py  wsgi.py
logger/: logger.py
tests/: conftest.py  test_integration.py  test_models_services_integration.py
