[project]
name = "python-digest"
version = "0.1.0"
description = "SMM Agents Pipeline - Automated news processing and social media content generation"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.0",
    "requests>=2.31.0",
    "feedparser>=6.0.10",
    "newspaper3k>=0.2.8",
    "lxml[html-clean]>=5.4.0",
    "python-dotenv>=1.0.0",
    "django>=5.2.7",
    "django-encrypted-model-fields>=0.6.5",
    "django-environ>=0.11.2",
    "langchain-openai>=1.0.1",
    "langchain-core>=1.0.1",
]
